Remove the parting thoughts section

--- a/developing_a_metrics_plan.adoc
+++ b/developing_a_metrics_plan.adoc
@@ -59,23 +59,17 @@ Finally, here are some dos and don'ts for open source community metrics.
 
 === Dos: 
 
-==== Make metrics public: This maybe stating the obvious, but transparency in open source should also extend to metrics. When you develop metrics, it helps to include a diverse group of people in the process so that metrics are inclusive and consider all contributions and not just code. If any adjustments need to be made for your community metrics, it's likely that you will first get that feedback/suggestion from community members. 
+- Make metrics public: This maybe stating the obvious, but transparency in open source should also extend to metrics. When we develop metrics, it helps to include a diverse group of people in the process so that metrics are inclusive and consider all contributions and not just code. Also, our metrics should evolve along with the community. If any adjustments need to be made for our community metrics, it's likely that we will first get that feedback/suggestion from community members. 
 
-==== Use metrics for spotting outliers: Metrics are particularly useful for highlighting areas that aren't doing well. Good examples for this is for things related to throughput such as time it takes for close issues, forum posts to be answered, code review, etc. In these examples, metrics are a great tool that can help identify potential bottlenecks in the community. 
+- Use metrics for spotting outliers: Metrics are particularly useful for highlighting areas that aren't doing well. Good examples for this is for things related to throughput such as time it takes for close issues, forum posts to be answered, code review, etc. In these examples, metrics are a great tool that can help identify potential bottlenecks in the community. 
 
-==== Use metrics as a starting point for gaining further insight into community health: Metrics may tell you _what_ is happening in your community, but you typically will not know the _why_ just by looking at the numbers. If the metrics shows that the number of first time contributors are declining, you will probably need to have some hallway or phone conversations in order to identify the causes of the decline. Metrics will highlight the symptoms as a starting point, but people will then have to do the work from there. 
+- Use metrics as a starting point for gaining further insight into community health: Metrics may tell you _what_ is happening in your community, but you typically will not know the _why_ just by looking at the numbers. If the metrics shows that the number of first time contributors are declining, you will probably need to have some hallway or phone conversations in order to identify the causes of the decline. Metrics will highlight the symptoms as a starting point, but people will then have to do the work from there. 
 
 === Dont's: 
 
-==== Using metrics as a sole basis for rewards: We already discussed gaming of contribution metrics previously if you only rely on metrics for rewards in the community. In addition, if people percieve that rewards are mostly based on the volume of work (or input) you run the risk of discouraging people who aren't able to devote as much time to the project or even people who are getting started in the community. Community members are not joining open source communities just to do more work and we do not want to lose sight of their intrinsic motivation. 
+- Using metrics as a sole basis for rewards: We already discussed gaming of contribution metrics previously if you only rely on metrics for rewards in the community. In addition, if people percieve that rewards are mostly based on the volume of work (or input) you run the risk of discouraging people who aren't able to devote as much time to the project or even people who are getting started in the community. Community members are not joining open source communities just to do more work and we do not want to lose sight of their intrinsic motivation. 
 
-==== Presenting metrics without proper context: Even when you get asked what sounds like a straightforward question like "how many contributors do you have in your community?", it is always helpful to get some context behind the question. Depending on who is asking the question, they're usually asking for something slightly different. For example, the total number of contributors in project's history maybe appropriate in one context, but in another the growth of contributors over a time period maybe what the questioner is really after. Also what do thet mean by contributors? Do they want to include people contributing to internationalization, issue triage, etc.? So before we point people to a set of metrics, it is helpful to understant the context or even motivation behind their question. 
+- Presenting metrics without proper context: Even when you get asked what sounds like a straightforward question like "how many contributors do you have in your community?", it is always helpful to get some context behind the question. Depending on who is asking the question, they're usually asking for something slightly different. For example, the total number of contributors in project's history maybe appropriate in one context, but in another the growth of contributors over a time period maybe what the questioner is really after. Also what do thet mean by contributors? Do they want to include people contributing to internationalization, issue triage, etc.? So before we point people to a set of metrics, it is helpful to understant the context or even motivation behind their question. 
 
-==== Ignoring non-metrics: As discussed previously, not everything is easily measurable or quantifiable. Even if we have a well defined and polished metrics dashboard, it should not stop us from continuing to have human conversation with community members to keep a pulse on what is happening in the community and encourage community members to point us to what we are not able to see in our metrics. 
-
-
-== Parting thoughts, resources, etc. 
- 
-=== Your metrics should evolve with your community/Set of metrics you use should not be set in stone.
-=== Remember to continue having hallway conversations with the community. 
+- Ignoring non-metrics: As discussed previously, not everything is easily measurable or quantifiable. Even if we have a well defined and polished metrics dashboard, it should not stop us from continuing to have human conversation with community members to keep a pulse on what is happening in the community and encourage community members to point us to what we are not able to see in our metrics. 
 
