--- a/developing_a_metrics_plan.adoc
+++ b/developing_a_metrics_plan.adoc
@@ -47,12 +47,12 @@ Metrics are certainly important, but there are definitely shortcomings that we n
 - Over-reliance on metrics will provide an incomplete insight: No set of metrics will provide a full picture of communities (or any organizations for that matter). Although it is important to have a standardized set of metrics so that you can gauge your community's progress over time, there will always be things that are extremely difficult to measure or quantify. For example, we all want contributors to feel a strong sense of belonging in the community and enjoy collaborating with other community members.  Whether this is happening or not would be difficult to quantify, but you still want to have a good sense on this aspect of community health even if it requires other means besides metrics collections. 
 - Ignoring intrnsic motivation: People often join (especially volunteer) organizations because they are intrincically motivated. For example, they strongly identify with group's mission or enjoy a sense of belonging with other members. If there is too much emphasis on people's contribution (or input) in metrics, you run the risk of losing sight of why people joined the organization in the first place. Most contributors in open source communities are volunteers who contribute in their own time, so ignoring their intrinscic motivation can often lead to negative consequences in the community. 
 
-Following are some examples of poor uses of metrics in open source communities. 
+Beyond these shortcoming sof metrics in general, the following are particularly relevant to open source communities. 
 
 - Gaming contribution metrics: This usually happens when metrics are used as a main (or even a sole) basis for recognition in the community. Not suprisingly you will see behaviors like people submitting multiple commits/merge requests/pull requests for trvial changes when they could have accomplished the same thing with a single commit/merge request/pull request. 
-- Vanity metrics: You also see vanity metrics outside of open source. A good example is placing too much emphasis on things like the number of social media followers. As it is in social media, quantity isn't everything. Also, if you want to ensure that community members' intrinsic motivation is satisfied in the community vanity metrics is definitely not a good way to go. 
-- Making comparisons between open source communities based on a few metrics: Sometimes you will hear things like "Project A had more than 5,000 people in their last  conference" or "Project B has 1,000 contributors" and people wanting set similar targets for their community. Before you are tempted to compare your open source community to others, it's important to rememeber that no two open source projects are alike. You may be in a different industry, in different stages of project maturity, or have a different scope. So in most cases, it's going to be challenging to make apples-to-apples comparision between different open source projects. Before you think about wanting 1,000 contributors in your community, you may want to ask basic questions like do you really need 1,000 people to accomplish your project's goals? 
-- Too much focus on code contributions: It may be because there are more tools available to capture code activities, but there's a tendency to focus mostly on code contributions in open source communities. However, it is important to remember other valuable contributions such as answering questions on forums, triaging issues, maintaining wiki pages, etc. There should be an effort to ensure that community metrics reflect variety of contributions (both code and non-code) in the community. 
+- Vanity metrics: You also see vanity metrics outside of open source. A good example is placing too much emphasis on things like the number of social media followers. As in social media, quantity isn't everything. Also, if you want to ensure that community members' intrinsic motivation is satisfied in the community vanity metrics is definitely not a good way to go. 
+- Making comparisons between different open source communities based on a few metrics: Sometimes you will hear things like "Project A had more than 5,000 attendees in their last conference" or "Project B has 1,000 contributors" and people wanting set similar targets for their community. Before you are tempted to compare your community to others, it's important to consider if you are making apples-to-apples comparison. You may be in a different industry, in different stages of project maturity, or have a different scope, etc. and a direct comparison may not be appropriate. Before you think about wanting 1,000 contributors in your community, you may want to ask basic questions like do you really need 1,000 people to accomplish your project's goals? 
+- Too much focus on code contributions: It may be because there are more tools available to capture code activities, but there's a tendency to focus mostly on code contributions in open source communities. However, it is important to remember other valuable contributions such as answering questions on forums, triaging issues, maintaining wiki pages, etc. There should be an effort to ensure that community metrics reflect variety of contributions (both code and non-code) so that no one in the community feels left out. 
 
 
 == Metrics dos and don'ts 
